syntax = "proto3";
package proto;

import "messages.proto";


service API {
    rpc CreateStream(CreateStreamRequest) returns (CreateStreamResponse) {}
    rpc ConsumeStream(ConsumeStreamRequest) returns (stream Message) {}
}
